--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <!-- instead of loading the card, load a submission form with the golf courses and handicaps
 and all that. axios.get all that data then build the card -->
-<body onload="buildCard('18300')">
+<body onload="buildCard()">
     <!-- Here is the basic JS, HTML, & CSS we built together to create a dynamic list of golf holes based on the number of players. -->
-    <h1>gold scorecard</h1>
+    <h1>golf scorecard</h1>
     <div class="fullcard">
         <div class="playerlist"></div>
         <div id="scorecard"></div>
