--- a/golf-scorecard/index.html
+++ b/golf-scorecard/index.html
@@ -20,14 +20,14 @@
   </select>
 
 
-  <div id="scorecard">
+  <div class="scorecard" id="scorecard">
     <div class="col" id="course-info"></div>
   <div class="row">
     <div class="playerlist">
-      <div class="table">HOLES</div>
-      <div class="table">YARDAGE</div>
-      <div class="table">PAR</div>
-      <div class="table">HANDICAP</div>
+      <div class="table" style="width: 100px;">HOLES</div>
+      <div class="table" style="width: 100px;">YARDAGE</div>
+      <div class="table" style="width: 100px;">PAR</div>
+      <div class="table" style="width: 100px;">HANDICAP</div>
     </div>
     <div class="row" id="holes">
     </div>
