players function event listener

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   <label class="label-style" for="course-select">Which Course?</label>
   <select id="course-select" class="select-css" onchange="getCourse(this.value)"></select>
   <label class="label-style" for="course-select">Which Tee?</label>
-  <select id="tee-select" class="select-css" onchange="getTee(this.value)">
-    <option value="1">1</option>
-    <option value="3">3</option>
-    <option value="2">2</option>
+  <select id="tee-select" class="select-css">
+    <option value="1">PRO</option>
+    <option value="2">CHAMPION</option>
+    <option value="3">MEN</option>
+    <option value="4">WOMEN</option>
   </select>
   <label class="label-style" for="course-select">How Many Players?</label>
-  <select onchange="players()" id="player-select" class="select-css">
+  <select id="player-select" class="select-css">
     <option value="1">1</option>
     <option value="2">2</option>
     <option value="3">3</option>
