--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <select id="course-select" class="select-css" onchange="getCourse(this.value)"></select>
   <label class="label-style" for="course-select">Which Tee?</label>
   <select id="tee-select" class="select-css">
-    <option value="1">PRO</option>
-    <option value="2">CHAMPION</option>
-    <option value="3">MEN</option>
-    <option value="4">WOMEN</option>
+    <option value="1">Pro</option>
+    <option value="2">Champion</option>
+    <option value="3">Men</option>
+    <option value="4">Women</option>
   </select>
   <label class="label-style" for="course-select">How Many Players?</label>
   <select id="player-select" class="select-css">
@@ -31,10 +31,10 @@
     <div class="col" id="course-info"></div>
   <div class="row">
     <div class="playerlist">
-      <div class="table" style="width: 100px; background-color: red;">HOLES</div>
-      <div class="table" style="width: 100px; background-color: aqua;">YARDAGE</div>
-      <div class="table" style="width: 100px; background-color: aqua;">PAR</div>
-      <div class="table" style="width: 100px; background-color: aqua;">HANDICAP</div>
+      <div class="table" style="width: 100px; background-color: #D9C359; font-weight: bold;">HOLES</div>
+      <div class="table" style="width: 100px; background-color: #D9C359; font-weight: bold;">YARDAGE</div>
+      <div class="table" style="width: 100px; background-color: #D9C359; font-weight: bold;">PAR</div>
+      <div class="table" style="width: 100px; background-color: #D9C359; font-weight: bold;">HANDICAP</div>
     </div>
     <div class="row" id="holes">
     </div>
